--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-.env
-log/
-.rvmrc
+config.js
+node_modules
 .DS_Store
