--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "headtoapp",
-  "version": "0.0.1",
+  "version": "0.0.2",
+   "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "latest",
-    "jade": "latest"
+    "hjs": "latest"
   }
 }
